--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -34,11 +34,9 @@
       <% end %>
       <script type="text/javascript">
         $( "#name" ).keyup(function(e) {
-          if( this.value.indexOf('.') != -1 ){
-            this.value = this.value.replace(".", "")
-          }
-          if( this.value.indexOf(' ') != -1 ){
-            this.value = this.value.replace(" ", "")
+          if( !/^[a-zA-Z0-9_-]*$/g.test(this.value) ){
+            this.value = ""
+            alert("Special characters are not allowed as input. Please use letters and numbers only.")
           }
         });
       </script>
