--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,7 +17,8 @@
       "#{Project::A_TYPE_COCOAPODS}" => 'products/product_show_cocoapods',
       "#{Project::A_TYPE_BIICODE}"   => 'products/product_show_biicode',
       "#{Project::A_TYPE_BOWER}"     => 'products/product_show_bower',
-      "#{Project::A_TYPE_CHEF}"      => 'products/product_show_chef'
+      "#{Project::A_TYPE_CHEF}"      => 'products/product_show_chef',
+      "#{Project::A_TYPE_NUGET}"     => 'products/product_show_nuget',
     } %>
 
     <% if ["Java", "Clojure"].member? @product.language %>
