Add more description to the orga API key.

--- a/app/views/organisations/apikey.html.erb
+++ b/app/views/organisations/apikey.html.erb
@@ -12,7 +12,9 @@
       <div class="form-group">
         <p>
           This is your API key to access the <a href="/api">VersionEye API</a>.
-          Please keep it as a secret. <br />
+          With this API key you can create, read, update and delete projects in this organisation through the VersionEye API.
+          This section is only visible for the members of the "Owners" (Admin) team.
+          Please keep this API key as a secret. <br />
           Don't share it! Don't post it on Facebook! <br />
           <br />
         </p>
