--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -19,6 +19,14 @@
             <%= f.text_field :name, :id => "name", :class => 'form-control', :disabled => disabled_flag %>
           </div>
         </div>
+        <script type="text/javascript">
+          $( "#name" ).keyup(function(e) {
+            if( !/^[a-zA-Z0-9_-]*$/g.test(this.value) ){
+              this.value = ""
+              alert("Special characters are not allowed as input. Please use letters and numbers only.")
+            }
+          });
+        </script>
 
         <div class="form-group">
           <%= f.label :company, :class => "control-label", :for => "company" %>
