--- a/app/views/organisations/_navi.html.erb
+++ b/app/views/organisations/_navi.html.erb
@@ -36,6 +36,11 @@
           <% if is_orga_owner?(@organisation, current_user) %>
             <li><hr/></li>
             <li><%= link_to 'API Key', apikey_organisation_path(@organisation) %></li>
+            <% if !Rails.env.enterprise? %>
+              <li><%= link_to 'Plan', plan_organisation_path(@organisation) %></li>
+              <li><%= link_to 'Billing address', billing_address_organisation_path(@organisation) %></li>
+              <li><%= link_to 'Payment history', payment_history_organisation_path(@organisation) %></li>
+            <% end %>
           <% end %>
         </ul>
       <% else %>
