--- a/app/views/organisations/_pricing.html.erb
+++ b/app/views/organisations/_pricing.html.erb
@@ -32,7 +32,7 @@
           <% btn_class = 'danger' if btn_txt.eql?('Downgrade') %>
           <% btn_style = 'font-size: 17px;' %>
           <% btn_style = '' if btn_txt.eql?('Downgrade') %>
-          <form action="/settings/update_plan" method="POST" >
+          <form action="<%= update_plan_organisation_path( @organisation ) %>" method="POST" >
             <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
             <input  type="hidden" name="plan" value="<%= plan.name_id %>" />
             <button type="submit" class="btn btn-<%= btn_class %>" style="<%= btn_style %>" id="<%= plan.name_id %>_button" ><%=btn_txt%></button>
