--- a/app/views/pullrequests/show.html.erb
+++ b/app/views/pullrequests/show.html.erb
@@ -43,7 +43,11 @@
           <tr class="flash %> dep_row" >
             <td style="padding-left: 5px;">
               <span >
-                <a href="/<%= issue.language %>/<%= issue.prod_key %>/<%= issue.version_requested %>"><%= issue.prod_key %></a>
+                <% if !issue.prod_key.to_s.empty? %>
+                  <a href="/<%= issue.language %>/<%= issue.prod_key %>/<%= issue.version_requested %>"><%= issue.name %></a>
+                <% else %>
+                  <%= issue.name %>
+                <% end %>
               </span>
             </td>
             <td>
