Add .NET to landing page and footer.

--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -35,6 +35,7 @@
 
   <div class="footer_language_row" >
     <a href="/java" >Java</a> |
+    <a href="/csharp" >C#</a> |
     <a href="/ruby" >Ruby</a> |
     <a href="/python" >Python</a> |
     <a href="/php" >PHP</a> |
