--- a/app/views/shared/_feature_package_managers.html.erb
+++ b/app/views/shared/_feature_package_managers.html.erb
@@ -20,6 +20,7 @@
             <li><a href="http://www.scala-sbt.org/">SBT</a> (Scala). Try the <a href="https://github.com/versioneye/versioneye_sbt_plugin">plugin</a>.</li>
             <li><a href="http://www.gradleware.com/">Gradle</a> (Groovy). Try the <a href="https://github.com/stempler/gradle-versioneye-plugin">plugin</a>.</li>
             <li><a href="http://leiningen.org/">Leiningen</a> (Clojure)</li>
+            <li><a href="https://www.nuget.org/">Nuget</a> (Microsoft .NET platform)</li>
             <li><a href="https://www.biicode.com/">Biicode</a> (C/C++)</li>
             <li><a href="http://berkshelf.com/">Berkshelf</a> (Chef)</li>
         </ul>
