--- a/app/views/shared/_about.html.erb
+++ b/app/views/shared/_about.html.erb
@@ -1,11 +1,11 @@
 <p>
 	VersionEye is a cross-platform search engine for free/libre/open source software libraries. Currently
-  we track more than <b>900K</b> free/libre/open source libraries from <b>Java</b>, <b>Ruby</b>, <b>Python</b>,
+  we track more than <b>1 Million</b> free/libre/open source libraries from <b>Java</b>, <b>.NET</b>, <b>Ruby</b>, <b>Python</b>,
   <b>Node.JS</b>, <b>PHP</b>, <b>JavaScript</b>, <b>CSS</b>, <b>Objective-C</b>, <b>R</b> and <b>Clojure</b>. Soon we will
-  add .NET, Perl and other languages.
+  add Perl and other languages.
 </p>
 <p>
-  You can follow any of the <b>900K</b> free/libre/open source libraries on VersionEye and we will notify you
+  You can follow any of the <b>1 Million</b> free/libre/open source libraries on VersionEye and we will notify you
   as soon the next version is released. VersionEye helps you to stay up-to-date.
 </p>
 <p>
