--- a/app/assets/stylesheets/sprite.scss
+++ b/app/assets/stylesheets/sprite.scss
@@ -5,6 +5,8 @@ $sprite_url: "/assets/Sprite.png";
 $c_url: "/assets/language/c.png";
 $biicode_url: "/assets/language/biicode.png";
 $csharp_url: "/assets/language/csharp.png";
+$html_url: "/assets/language/html.png";
+$coffeescript_url: "/assets/language/coffeescript.png";
 $chef_url: "/assets/language/chef.png";
 
 @mixin sprite($x, $y, $width, $height){
@@ -32,6 +34,22 @@ $chef_url: "/assets/language/chef.png";
 
 @mixin csharp_icon($x, $y, $width, $height){
   background: url($csharp_url) no-repeat;
+  display: inline-block;
+  vertical-align: middle;
+  width: $width;
+  height: $height;
+}
+
+@mixin html_icon($x, $y, $width, $height){
+  background: url($html_url) no-repeat;
+  display: inline-block;
+  vertical-align: middle;
+  width: $width;
+  height: $height;
+}
+
+@mixin coffeescript_icon($x, $y, $width, $height){
+  background: url($coffeescript_url) no-repeat;
   display: inline-block;
   vertical-align: middle;
   width: $width;
@@ -73,6 +91,18 @@ $chef_url: "/assets/language/chef.png";
   &.on { @include csharp_icon($x2, $y2, $width, $height);}
   &:hover { @include csharp_icon($x2, $y2, $width, $height);}
   &:active { @include csharp_icon($x2, $y2, $width, $height);}
+}
+@mixin html_toggle($x1, $y1, $x2, $y2, $width, $height){
+  @include html_icon($x1, $y1, $width, $height);
+  &.on { @include html_icon($x2, $y2, $width, $height);}
+  &:hover { @include html_icon($x2, $y2, $width, $height);}
+  &:active { @include html_icon($x2, $y2, $width, $height);}
+}
+@mixin coffeescript_toggle($x1, $y1, $x2, $y2, $width, $height){
+  @include coffeescript_icon($x1, $y1, $width, $height);
+  &.on { @include coffeescript_icon($x2, $y2, $width, $height);}
+  &:hover { @include coffeescript_icon($x2, $y2, $width, $height);}
+  &:active { @include coffeescript_icon($x2, $y2, $width, $height);}
 }
 @mixin chef_toggle($x1, $y1, $x2, $y2, $width, $height){
   @include chef_icon($x1, $y1, $width, $height);
@@ -201,6 +231,20 @@ $chef_url: "/assets/language/chef.png";
 }
 
 .icon_csharp_small_container{
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+
+.icon_html_small_container{
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+
+.icon_coffeescript_small_container{
   margin: 0;
   width: 30px;
   height: 30px;
@@ -379,6 +423,40 @@ $chef_url: "/assets/language/chef.png";
 }
 .icon_csharp.small.on{
   background: url(/assets/language/csharp_small.png) no-repeat;
+  margin: 0;
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+}
+
+.icon_html {
+  @include html_toggle(0px, 0px, 0px, 0px, 56px, 56px);
+}
+.icon_html_big_container{
+  padding: 0;
+  width: 56px;
+  height: 56px;
+  display: inline-block;
+}
+.icon_html.small.on{
+  background: url(/assets/language/html_small.png) no-repeat;
+  margin: 0;
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+}
+
+.icon_coffeescript {
+  @include coffeescript_toggle(0px, 0px, 0px, 0px, 56px, 56px);
+}
+.icon_coffeescript_big_container{
+  padding: 0;
+  width: 56px;
+  height: 56px;
+  display: inline-block;
+}
+.icon_coffeescript.small.on{
+  background: url(/assets/language/coffeescript_small.png) no-repeat;
   margin: 0;
   width: 25px;
   height: 25px;
