Add Chef to the list of languages in the footer.

--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -47,6 +47,7 @@
     <a href="/objective-c" >Objective-C</a> |
     <a href="/clojure" >Clojure</a> |
     <a href="/r" >R</a>
+    <a href="/chef" >Chef</a>
   </div>
 
 </footer>
