--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -46,7 +46,7 @@
     <a href="/HTML" >HTML</a> |
     <a href="/objective-c" >Objective-C</a> |
     <a href="/clojure" >Clojure</a> |
-    <a href="/r" >R</a>
+    <a href="/r" >R</a> |
     <a href="/chef" >Chef</a>
   </div>
 
