Show code snippet for Nuget on .NET pages.

--- a/app/views/products/_product_show_nuget.html.erb
+++ b/app/views/products/_product_show_nuget.html.erb
@@ -8,8 +8,7 @@
   <%= render 'products/helpers/kpi_summary' %>
   <%= render 'products/helpers/product_show_keywords' %>
   <%= render 'products/product_show_dependencies' %>
-
-
+  <%= render 'products/product_show_nuget_code_snippet' %>
   <%= render 'products/product_show_comments' %>
   <%= render 'products/product_show_comment' %>
 </div>
