Put version string into [] otherwise it's greater than.

--- a/app/views/products/_product_show_nuget_code_snippet.html.erb
+++ b/app/views/products/_product_show_nuget_code_snippet.html.erb
@@ -7,7 +7,7 @@
     <div >
       <h5 class="dep_header">Nuget entry</h5>
     </div>
-    <div style="margin-bottom: 0;"><pre class = "prettyprint" style="background-color: #fff; margin-bottom: 0;"><code>&lt;dependency id="<%= @product.prod_key %>" version="<%= @version.to_s %>" /&gt;</code></pre></div>
+    <div style="margin-bottom: 0;"><pre class = "prettyprint" style="background-color: #fff; margin-bottom: 0;"><code>&lt;dependency id="<%= @product.prod_key %>" version="[<%= @version.to_s %>]" /&gt;</code></pre></div>
   </div>
 
   <div  style="margin-bottom: 5px;">
