Display dependencies for .NET

--- a/app/views/products/_product_show_dependencies.html.erb
+++ b/app/views/products/_product_show_dependencies.html.erb
@@ -14,7 +14,8 @@
       "#{Project::A_TYPE_COMPOSER}"  => 'product_show_dependencies_packagist',
       "#{Project::A_TYPE_COCOAPODS}" => 'products/cocoapods/product_show_dependencies',
       "#{Project::A_TYPE_BIICODE}"   => 'product_show_dependencies_biicode',
-      "#{Project::A_TYPE_CHEF}"      => 'product_show_dependencies_chef'
+      "#{Project::A_TYPE_CHEF}"      => 'product_show_dependencies_chef',
+      "#{Project::A_TYPE_NUGET}"     => 'product_show_dependencies_nuget'
     }
 
     partial = partial_map[@product.prod_type]
