Add + before "Add Project".

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -63,7 +63,7 @@
         <ul class="nav navbar-nav navbar-right">
 
           <li>
-            <a style="color: #5cb85c" href="/projects/new" role="button">Add Project</a>
+            <a style="color: #5cb85c" href="/projects/new" role="button"><i class="fa fa-plus" aria-hidden="true"></i> Add Project</a>
           </li>
 
           <li>
