Improve sec tab

--- a/app/views/user/projects/helpers/_security_items.html.erb
+++ b/app/views/user/projects/helpers/_security_items.html.erb
@@ -16,6 +16,13 @@
           <% if !sv.summary.to_s.empty? && !dep.language.to_s.eql?(Product::A_LANGUAGE_PHP) %>
             <li><%= sv.summary %></li>
           <% end %>
+          <% if !sv.nsp.to_s.empty? && sv.source.to_s.eql?("snyk") %>
+            <li><a href="https://snyk.io/vuln/<%= sv.name_id %>" >Snyk.io</a></li>
+          <% end %>
+          <% if !sv.nsp.to_s.empty? && !sv.source.to_s.eql?("snyk") %>
+            <% sec_issue = SecurityVulnerability.where(:nsp => sv.nsp, :source => 'snyk').first %>
+            <li><a href="https://snyk.io/vuln/<%= sec_issue.name_id %>" >Snyk.io</a></li>
+          <% end %>
           <% sv.links.keys.each do |key| %>
             <% next if key.to_s.empty? %>
             <li><a href="<%= sv.links[key] %>"><%= sv.links[key] %></a></li>
