Add note for Snyk.

--- a/app/views/user/projects/helpers/_security_items.html.erb
+++ b/app/views/user/projects/helpers/_security_items.html.erb
@@ -14,7 +14,7 @@
         <ul >
 
           <% if sv.source.to_s.eql?("snyk") %>
-            <li><a href="https://snyk.io/vuln/<%= sv.name_id %>" ><%= sv.name_id %></a></li>
+            <li><a href="https://snyk.io/vuln/<%= sv.name_id %>" ><%= sv.name_id %> (Snyk)</a></li>
           <% else %>
             <li><%= sv.name_id %></li>
           <% end %>
@@ -22,7 +22,7 @@
           <% if !sv.nsp.to_s.empty? && !sv.source.to_s.eql?("snyk") %>
             <% sec_issue = SecurityVulnerability.where(:nsp => sv.nsp, :source => 'snyk').first %>
             <% if sec_issue %>
-              <li><a href="https://snyk.io/vuln/<%= sec_issue.name_id %>" ><%= sec_issue.name_id %></a></li>
+              <li><a href="https://snyk.io/vuln/<%= sec_issue.name_id %>" ><%= sec_issue.name_id %> (Snyk)</a></li>
             <% end %>
           <% end %>
 
