Add UI for Proxy Settings.

--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -19,6 +19,7 @@
             <li><%= link_to 'Profile'            , settings_profile_path       , :rel => "nofollow" %></li>
             <li><%= link_to 'Global Settings'    , settings_globalsettings_path, :rel => "nofollow" %></li>
             <li><%= link_to 'SMTP Settings'      , settings_emailsettings_path , :rel => "nofollow" %></li>
+            <li><%= link_to 'Proxy Settings'     , settings_proxy_path         , :rel => "nofollow" %></li>
             <li><%= link_to 'Email Addresses'    , settings_emails_path        , :rel => "nofollow" %></li>
             <li><%= link_to 'Connect'            , settings_connect_path , :rel => "nofollow" %></li>
             <li><%= link_to 'Password'           , settings_password_path      , :rel => "nofollow" %></li>
