Improve the documentation of the plan/subscription.

--- a/app/views/organisations/_pricing.html.erb
+++ b/app/views/organisations/_pricing.html.erb
@@ -5,7 +5,10 @@
         <td>Plan</td>
         <td>Price / Month</td>
         <td>Private Projects</td>
-        <td>API Calls / Hour </td>
+        <td>
+          API calls per hour &amp;<br/>
+          components to sync
+        </td>
         <td>AddOns</td>
         <td></td>
       </tr>
