--- a/app/views/organisations/plan.html.erb
+++ b/app/views/organisations/plan.html.erb
@@ -25,6 +25,22 @@
       </p>
     <% end %>
 
+    <p>
+      <br/>
+      <ul>
+        <li style="padding-bottom: 10px;">
+          <b>Private project</b>: A private VersionEye project is a project which is based on a project file (Gemfile, pom.xml and so on) in an private Git repository.
+        </li>
+        <li style="padding-bottom: 10px;">
+          <b>API calls per hour</b>: The number of HTTP requests per hour you can do to the VersionEye <a href="/api">API</a> depends on your subscription. As higher your subscription plan as more API calls per hour you can do. The API calls are especially important for you if you want to integrate VersionEye into your own tool chain.
+        </li>
+        <li style="padding-bottom: 10px;">
+          <b>Components to sync</b>: The "components to sync" number is important for you if you run your own instance
+          of VersionEye. Any VersionEye Enterprise instance tries to keep the local database up-to-date through a build in sync mechanism which is based on the public VersionEye API. If you are using 210 different open source components/dependencies over all your software projects and you always want to have current meta information to that 210 OS components in your local VersionEye Enterprise instance, you will need at least the "Freelance" plan.
+        </li>
+      </ul>
+    </p>
+
   </div>
 
 </div>
