Update welcome text for VEE.

--- a/app/views/layouts/enterprise_activation.html.erb
+++ b/app/views/layouts/enterprise_activation.html.erb
@@ -40,7 +40,7 @@
 
             <div>
               <p>
-                Please activate this instance with your API Key. If you don't have one, please sign up at <a href="https://www.VersionEye.com">https://www.VersionEye.com</a> and get one here <a href="https://www.versioneye.com/settings/api">https://www.versioneye.com/settings/api</a>.
+                Please activate this instance with your API Key. If you don't have one, please sign up at <a href="https://www.VersionEye.com">https://www.VersionEye.com</a> and get one.
               </p>
             </div>
 
